# Nirnnat

./: CMakeLists.txt  main.cpp
exe/exeCli/: runClient  settings.txt
exe/exeSer/: runServer
include/: AIPlayer.h  Board.h  ConsoleDisplay.h  ConsoleMenu.h  GameDisplay.h  GameFlow.h  GameLogic.h  Player.h  Point.h  StandardLogic.h  StandardPlayer.h
src/: AIPlayer.cpp  Board.cpp  Client.cpp  Client.h  ConsoleDisplay.cpp  ConsoleMenu.cpp  DisplayOnlineGame.cpp  DisplayOnlineGame.h  GameDisplay.cpp  GameFlow.cpp  GameFlow.h  GameLogic.cpp  Player.cpp  PlayerSender.cpp  PlayerSender.h  Point.cpp  RemotePlayer.cpp  RemotePlayer.h  StandardLogic.cpp  StandardPlayer.cpp  main.cpp
src/client/: CMakeLists.txt  compile.txt  makefile  settings.txt  sources.txt
src/client/lib/googletest-master/googlemock/: CMakeLists.txt
src/client/lib/googletest-master/googletest/: CMakeLists.txt
src/client/reversiFiles/: AIPlayer.cpp  Client.h  DisplayOnlineGame.cpp  DisplayOnlineGame.h  GameFlow.cpp  OnlineStartGameMenu.cpp
src/reversiFiles/: AIPlayer.h  Board.cpp  GameFlow.cpp  GameFlow.h  main.cpp
src/server/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  GameRooms.cpp  JoinCommand.cpp  Server.cpp  Server.h  Task.h  ThreadPool.h  main.cpp  makefile  server_settings.txt
test/: test_AIPlayer.cpp  test_board.cpp  test_standardLogic.cpp
