
cmake_minimum_required(VERSION 3.8)
project(ass3)
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
set(CMAKE_CXX_STANDARD 98)
set(SOURCE_FILES src/GameLogic.cpp src/StandardLogic.cpp src/Point.cpp src/ConsoleDisplay.cpp src/Board.cpp src/Player.cpp src/GameDisplay.cpp src/GameFlow.cpp src/StandardPlayer.cpp test/test_standardLogic.cpp src/AIPlayer.cpp include/AIPlayer.h test/test_AIPlayer.cpp src/ConsoleMenu.cpp include/ConsoleMenu.h)
set(TEST_FILES test/test_board.cpp test/test_standardLogic.cpp src/AIPlayer.cpp include/AIPlayer.h test/test_AIPlayer.cpp src/ConsoleMenu.cpp include/ConsoleMenu.h)
add_executable(runMain main.cpp ${SOURCE_FILES} src/AIPlayer.cpp include/AIPlayer.h src/ConsoleMenu.cpp include/ConsoleMenu.h)
add_executable(runUnitTests test/gtest_main.cpp ${TEST_FILES} ${SOURCE_FILES} test/test_standardLogic.cpp src/AIPlayer.cpp include/AIPlayer.h test/test_AIPlayer.cpp src/ConsoleMenu.cpp include/ConsoleMenu.h)
target_link_libraries(runUnitTests gtest gtest_main)
add_test(runUnitTests runUnitTests)